removed footer width to fix layout bug

--- a/src/app/footer/footer.component.sass
+++ b/src/app/footer/footer.component.sass
@@ -1,7 +1,7 @@
 @import 'src/variables.sass'
     
 #footer-container
-    width: 100%
+    // width: 100%
     display: flex
     flex-direction: row
     justify-content: center
